# Cooper_drone

./: .env.example  .gitignore  AGENTS.md  README.md  d500_driver.cpp  d500_test.py  pyproject.toml  requirements.txt  task_healthcheck.py  task_takeoff_hover.py  task_vision_follow.py  task_waypoint_square.py
.claude/: settings.local.json
config/: default.yaml  dry_run.yaml  sitl.yaml  stm32mp257_uart.yaml  vehicle.yaml
docs/: first_flight_checklist.md  hardware_setup.md  no_props_checklist.md  safety_audit.md  safety_validation.md  sitl.md
logs/: .gitkeep
scripts/: check_safety_dry_run.py  check_safety_sitl.py  check_serial_link.py  print_config.py  run.sh
src/: __init__.py  app_context.py  ardupilot_modes.py  config_loader.py  control.py  fake_vehicle.py  fc_link.py  logging_runtime.py  logx.py  main.py  mav_session.py  mav_state.py  mavlink_commands.py  mavlink_connection.py  mavlink_messages.py  mission_base.py  mission_runtime.py  motion_gate.py  movement.py  safety.py  safety_actions.py  safety_events.py  safety_policy.py  setpoint_streamer.py  state.py  telemetry.py  types.py
systemd/: drone_mission.service
test/: __init__.py  conftest.py  fake_mavlink.py  test_app_context.py  test_config_loader.py  test_control_fake_session.py  test_deployment_docs.py  test_dry_run_integration.py  test_import_boundaries.py  test_logging_runtime.py  test_main_safety_exit.py  test_mavlink_commands.py  test_mavlink_connection.py  test_mavlink_messages.py  test_mission_runtime.py  test_motion_gate.py  test_movement.py  test_safety.py  test_safety_actions.py  test_safety_events.py  test_safety_policy.py  test_setpoint_streamer.py  test_skeleton.py  test_solutions.py  test_state.py  test_task_scripts.py  test_vision_contract.py  test_vscode_config.py
tests/: fake_vehicle.py  test_config.py  test_config_loader.py  test_control_fake_session.py  test_main_dry_run.py  (+8 more)
(+34 files in other folders)
