[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cooper-drone"
version = "0.1.0"
description = "Raspberry Pi companion controller for ArduPilot using pymavlink only."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pymavlink>=2.4.41",
  "PyYAML>=6.0.1",
  "opencv-python-headless>=4.10.0.84",
  "flask>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-p no:cacheprovider"
